# strenpy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: Tensile_C_08.lis  Tensile_E_01.lis  Tensile_F_01.lis
src/strenpy/: __init__.py  calculations.py  cli.py  data_processing.py  visualizations.py
tests/: test_calculations.py
