[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[project]
name = "strenpy"
version = "0.1.0"
description = "Tensile test analysis and stress-strain calculations based on MIT materials science curriculum"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Malwina Belczewska"}
]
keywords = ["materials-science", "stress-strain", "tensile-test", "engineering", "mechanics", "gdansk-university-of-technology"]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
    "Natural Language :: English",
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "rich>=13.0.0",
]

[project.scripts]
strenpy = "strenpy.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
